fix spacings

--- a/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
+++ b/src/views/SaveBackupPhrase/SaveBackupPhrase.module.css
@@ -1,12 +1,12 @@
 .container {
   composes: container from '../../components/View/View.module.css';
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 35px;
+  margin: 0 0 25px;
 }
 
 .subheading {
